--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys24.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p> -->
 					<p class="text-black text-left">
+						<b style='color:darkgreen; font-size:24px;'>[April 28th]</b> <b style='color:darkgreen; font-size:24px;'>The notification of acceptance for NetAISys '25 has been postponed to April 30, 2025. Thank you for your understanding and patience.</b>
+					</p> 
+					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[March 7th]</b> <b style='color:darkgreen; font-size:24px;'>The NetAISys '25 paper submission system is now <a href="https://netaisys25.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
 					</p> 
 					<p class="text-black text-left">
@@ -379,7 +382,7 @@
 						<div class="text-black text-left">
 						  <ul>
 							<li><p>Submission Deadline: <b>Saturday April 19th, 2025, AoE [FIRM]</b></p></li>
-							<li><p>Notification of Acceptenace: <b>Friday April 25th, 2025, AoE</b></p></li>
+							<li><p>Notification of Acceptenace: <b>Friday April 30th, 2025, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b>Thursday May 1st, 2025, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b style='color:red;'>Friday June 27, 2025</b></p></li>
 						  </ul>         
