--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 				<div class="col-lg-12 col-lg-offset-1 text-left">
 					<ul>
 						<li><p><a href="https://bryandony.github.io/" target="_blank" rel="noopener noreferrer">Bryan Donyanavard, San Diego State University</a></p></li>
-						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Pure Storage</a></p></li>
+						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Woojoong Kim, Microsoft</a></p></li>
 						<li><p><a href="https://www.linkedin.com/in/woojoong/ " target="_blank" rel="noopener noreferrer">Tingjun Chen, Duke University</a></p></li>
 				</div>
 			</div>
