--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 					<li> 
 						<a class="page-scroll" href="#about">About</a>
 					</li>
+					<li> 
+						<a class="page-scroll" href="#accepted">Accepted Papers</a>
+					</li>
 					<li>
 						<a class="page-scroll" href="#CfP">Call For Papers</a>
 					</li>
@@ -137,18 +140,6 @@
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
-					<!--<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[May 13th]</b> <b style='color:darkblue; font-size:16px;'>NetAISys and EnvSys to merge! Workshop Program and Presenter Instructions now available!</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[April 22nd]</b> <b style='color:darkblue; font-size:16px;'>The authors notifications will be sent out to all authors on April 25, 2024.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[April 5th]</b> <b style='color:darkblue; font-size:16px;'>The paper submission deadline has been extended to April 12th!</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[February 23th]</b> <b style='color:darkblue; font-size:16px;'>The NetAISys '24 paper submission system is now <a href="https://netaisys24.hotcrp.com/u/0/" target="_blank" rel="noopener noreferrer">online</a>. Looking forward to receiving your works!</b>
-					</p> -->
 					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[April 28th]</b> <b style='color:darkgreen; font-size:24px;'>The notification of acceptance for NetAISys '25 has been postponed to May 2nd, 2025. Thank you for your understanding and patience.</b>
 					</p> 
@@ -161,27 +152,6 @@
 					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[February 22nd]</b> <b style='color:darkgreen; font-size:24px;'>NetAISys '25 will be co-located with ACM MobiSys '25. See you in California!</b>
 					</p>
-					<!-- <p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[June 8th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions are on-line.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[June 5th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions to be announced by June 8th. Stay tuned!</b>
-					</p> -->					
-					<!-- <p class="text-black text-left">
-						<b style='color:darkblue; font-size:9px;'>[May 12th]</b> <b style='color:darkblue; font-size:9px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:9px;'>[May 11th]</b> <b style='color:darkblue; font-size:9px;'> Camera-Ready Instructions and Registration details updated.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:9px;'>[May 8th]</b> <b style='color:darkblue; font-size:9px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:9px;'>[April 5th]</b> <b style='color:darkblue; font-size:9px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
-					</p> -->
 		</div>
 		</div>
 		</div>
@@ -297,6 +267,41 @@
 					<p class="text-black text-left">
 						The 3rd International Workshop on Networked AI Systems (NetAISys), <b>AI at the Edge & Beyond for Emerging Computing Frontiers</b>, colocated with MobiSys 2025, aims to bring together leading experts in the field to explore the latest advancements and challenges in the integration of AI and networking technologies. Such integration is driving the development of intelligent and autonomous systems that are capable of making decisions and performing tasks in real-time. The workshop will provide a platform for the presentation and discussion of cutting-edge research, the demonstration of innovative networked AI systems and applications, and the exchange of ideas, experiences, and case studies. The significance of this workshop to the ACM MobiSys community lies in the growing reliance on AI systems that are connected to and operate within wireless networks. With AI/ML migrating to the network edge, there is an increasing demand for efficient and effective AI systems that play a crucial role in powering various intelligent and autonomous systems in dynamic network environments with varying network conditions. By bringing together researchers, practitioners, and industry professionals, we hope to create a collaborative environment and a one-of-kind and valuable opportunity to delve into the challenges and latest advancements presented by networked AI systems and applications. We look forward to sharing our experience and insights with the ACM MobiSys community.
 					</p>
+		</div>
+		</div>
+		</div>
+	</section>
+
+	<section id="accepted">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Accpeted Papers</h2>
+					<hr class="light">
+
+<div class="text-black text-left">
+  <ul>
+    <li><strong>Empirical Analysis of LLMDPP: Advancing Log Parsing in the LLM Era</strong><br>
+      Authors: K. Wang, S. Zhang, H. Nan, X. Hou, J. Zou, Z. Miao
+    </li>
+    <li><strong>Bringing Edge Intelligence to Wildlife Camera Traps with Hyperdimensional Computing</strong><br>
+      Authors: J. Zhang, T. Jacques, J. Chen, Z. Kapetanovic
+    </li>
+    <li><strong>MRM3: Machine Readable ML Model Metadata</strong><br>
+      Authors: A. Čop, B. Bertalanič, M. Grobelnik, C. Fortuna
+    </li>
+    <li><strong>SPATIUM: A Context-Aware Machine Learning Framework for Immersive Spatiotemporal Health Understanding</strong><br>
+      Authors: Y. Liu, S. Jang, A. Montanari, F. Kawsar
+    </li>
+    <li><strong>SensorMCP: A Model Context Protocol Server for Custom Sensor Tool Creation</strong><br>
+      Authors: Y. Guo, G. Zhu, K. Liu, G. Xing
+    </li>
+    <li><strong>Presto: Hybrid CPU-GPU Preprocessing Framework for Video-based AI Inference System</strong><br>
+      Authors: J. Lee, D. Han, J. Kim
+    </li>
+  </ul>
+</div>
+
 		</div>
 		</div>
 		</div>
