--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Accpeted Papers</h2>
+					<h2 class="section-heading">Accepted Papers</h2>
 					<hr class="light">
 
 <div class="text-black text-left">
