accepted papers news

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkgreen; font-size:24px;'>[May 29th]</b> <b style='color:darkgreen; font-size:24px;'>The list of accepted papers is online!.</b>
+					</p> 
+					<!-- <p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[April 28th]</b> <b style='color:darkgreen; font-size:24px;'>The notification of acceptance for NetAISys '25 has been postponed to May 2nd, 2025. Thank you for your understanding and patience.</b>
 					</p> 
 					<p class="text-black text-left">
@@ -151,7 +154,7 @@
 					</p>
 					<p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[February 22nd]</b> <b style='color:darkgreen; font-size:24px;'>NetAISys '25 will be co-located with ACM MobiSys '25. See you in California!</b>
-					</p>
+					</p> -->
 		</div>
 		</div>
 		</div>
