--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
 		</div>
 	</section>
 
-	<section id="accepted">
+<!--<	<section id="accepted">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">Accepted Papers</h2>
 					<hr class="light">
 
-<!--<div class="text-black text-left">
+div class="text-black text-left">
   <ul>
     <li><strong>Empirical Analysis of LLMDPP: Advancing Log Parsing in the LLM Era</strong><br>
       Authors: K. Wang, S. Zhang, H. Nan, X. Hou, J. Zou, Z. Miao
