--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ div class="text-black text-left">
 
 						We believe this merger will encourage vibrant discussions and promote the exchange of ideas across a broader spectrum of research at the intersection of networking, AI, and environmental sensing. The focus areas of EnvSys, in particular, provide compelling real-world use cases for networked AI systems.
 
-						The joint workshop program will feature eleven papers, including five from the EnvSys workshop and six from the NetAISys workshop. Each paper presentation is allocated 15 minutes, followed by a 3-minute Q&amp;A session. The event will also include a keynote and a panel discussion to foster interactive and cross-disciplinary dialogue.
+						The joint workshop program will feature eleven papers, including five from the EnvSys workshop and six from the NetAISys workshop. Each paper presentation is allocated 15 minutes, followed by a 3-minute Q&amp;A session. The event will also include two keynotes and a panel discussion to foster interactive and cross-disciplinary dialogue.
 					</p>
 					<style>
 						hr.dashed {
@@ -418,7 +418,7 @@ div class="text-black text-left">
 					
 						<li><strong>13:00 – 14:00</strong>: <em>Panel Discussion</em></li>
 						<ul>
-							<li>Panelists: Prof. Lin Zhong (Yale CS), Prof. Hang Qiu (UC Riverside ECE/CSE), and Prof. Juheon Yi (Microsoft)</li>
+							<li>Panelists: Prof. Yasamin Mostofi, Prof. Lin Zhong (Yale CS), Prof. Hang Qiu (UC Riverside ECE/CSE), and Juheon Yi (Microsoft)</li>
 						</ul>
 						<hr class="dashed">
 
