--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ div class="text-black text-left">
 					
 						<li><strong>13:00 – 14:00</strong>: <em>Panel Discussion</em></li>
 						<ul>
-							<li>Panelists: Prof. Yasamin Mostofi, Prof. Lin Zhong (Yale CS), Prof. Hang Qiu (UC Riverside ECE/CSE), and Juheon Yi (Microsoft)</li>
+							<li>Panelists: Prof. Yasamin Mostofi (University of California Santa Barbara), Prof. Lin Zhong (Yale CS), Prof. Hang Qiu (UC Riverside ECE/CSE), and Juheon Yi (Microsoft)</li>
 						</ul>
 						<hr class="dashed">
 
