--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ div class="text-black text-left">
 
 						We believe this merger will encourage vibrant discussions and promote the exchange of ideas across a broader spectrum of research at the intersection of networking, AI, and environmental sensing. The focus areas of EnvSys, in particular, provide compelling real-world use cases for networked AI systems.
 
-						The joint workshop program will feature eleven papers, including five from the EnvSys workshop and six from the NetAISys workshop. Each paper presentation is allocated 15 minutes, followed by a 3-minute Q&amp;A session. The event will also include two keynotes and a panel discussion to foster interactive and cross-disciplinary dialogue.
+						The joint workshop program will feature eleven papers, including five from the EnvSys workshop and six from the NetAISys workshop. Each paper presentation is allocated 15 minutes, followed by a 3-minute Q&amp;A session. The event will also include two keynotes to foster interactive and cross-disciplinary dialogue.
 					</p>
 					<style>
 						hr.dashed {
@@ -414,13 +414,7 @@ div class="text-black text-left">
 						</ul>
 						<hr class="dashed">
 					
-						<li><strong>11:55 – 13:00</strong>: Lunch Break</li>
-						<hr class="dashed">
-					
-						<li><strong>13:00 – 14:00</strong>: <em>Panel Discussion</em></li>
-						<ul>
-							<li>Panelists: Prof. Lin Zhong (Yale CS), Prof. Hang Qiu (UC Riverside ECE/CSE), and Juheon Yi (Microsoft)</li>
-						</ul>
+						<li><strong>11:55 – 14:00</strong>: Lunch Break</li>
 						<hr class="dashed">
 
 						<li><strong>14:00 – 14:40</strong>: <em>Keynote Speaker</em> – Juheon Yi, Senior Researcher (Microsoft) </li>
