--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ div class="text-black text-left">
 						<li><strong>14:45 – 15:05</strong>: Coffee Break</li>
 						<hr class="dashed">
 					
-						<li><strong>15:05 – 16:20</strong>: <em>Session 3 – Intelligent Environments (Part 2)</em></li>
+						<li><strong>15:05 – 16:20</strong>: <em>Session 3 – Intelligent Environments</em></li>
 						<ul>
 							<li>
 								<strong>CrashSniffer: UWB-Based Anchor-Free Pedestrian Collision Prediction for Personal Mobility Vehicles (EnvSys)</strong><br>
