--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ div class="text-black text-left">
 		</div>
 		<div class="container">
 			 <div class="col-lg-12 text-center">
-						<h2 class="section-heading">TPC (Work in Progress)</h2>
+						<h2 class="section-heading">TPC</h2>
 						<hr class="primary">
 			 </div>
 			 <div class="row text-black text-center">
