--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
-						<b style='color:darkgreen; font-size:24px;'>[June 16th]</b> <b style='color:darkgreen; font-size:24px;'>Workshop schedule (tentative) is online!.</b>
+						<b style='color:darkgreen; font-size:24px;'>[June 16th]</b> <b style='color:darkgreen; font-size:24px;'>Workshop schedule (tentative) is online!</b>
 					</p>
 					<p class="text-black text-left">
-						<b style='color:darkgreen; font-size:24px;'>[May 29th]</b> <b style='color:darkgreen; font-size:24px;'>The list of accepted papers is online!.</b>
+						<b style='color:darkgreen; font-size:24px;'>[May 29th]</b> <b style='color:darkgreen; font-size:24px;'>The list of accepted papers is online!</b>
 					</p> 
 					<!-- <p class="text-black text-left">
 						<b style='color:darkgreen; font-size:24px;'>[April 28th]</b> <b style='color:darkgreen; font-size:24px;'>The notification of acceptance for NetAISys '25 has been postponed to May 2nd, 2025. Thank you for your understanding and patience.</b>
