--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<div class="header-content-inner">
 				<h1 style="color:red;">International Workshop on Networked AI Systems</h1>
 				<hr>
-				<p style="color:black; font-size: 40px;">Co-Located with ACM MobiSys 2026<br>June 27, 2026. Cambridge, United Kingdom</p>
+				<p style="color:black; font-size: 40px;">Co-Located with ACM MobiSys 2026<br>June, 2026. Cambridge, United Kingdom</p>
 				<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
 			</div>
 		</div>
