--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 				<div class="col-lg-4 text-center">
 					<div class="service-box">
 
-						<img class="img-circle" src="./img/organizers/roberto.png" alt="Rounded image" width="150" height="150">
+						<img class="img-circle" src="./img/organizers/rob.jpg" alt="Rounded image" width="150" height="150">
 						<h2><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito</a></h2>
 						<p>EURECOM</p>
 					</div>
